update config by editing the title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Lifelong Leanner and Aspiring Software and Machine Learning Engineer 
+title: Espoir Murhabazi, Aspiring Machine Learning Engineer
 author: Espoir Murhabazi Buzina 
 email: espoir.mur@gmail.Com
 description: My Blog , a short description of me and stuff I'm working on
