--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Espoir Murhabazi, Aspiring Machine Learning Engineer
 author: Espoir Murhabazi Buzina 
 email: espoir.mur@gmail.Com
-description: My Blog , a short description of me and stuff I'm working on
+description: My Blog ,and random stuffs I write about
 
 # social links
 #twitter_username: @EspyMur
@@ -10,3 +10,4 @@ description: My Blog , a short description of me and stuff I'm working on
 #medium_username: @EspyMur
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima 
+plugins: ['jekyll-twitter-plugin']
