--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: Espoir Murhabazi, Aspiring Machine Learning Engineer
+title: Espoir Murhabazi, Software Engineer and  Aspiring Machine Learning Engineer
 author: Espoir Murhabazi Buzina 
 email: espoir.mur@gmail.Com
-description: My Blog ,and random stuffs I write about
-
+description: My personal website, 
+            I always write  about problems I'm facing in my career and the solution I found after googling and 
+            sometimes the lessons I have learned. 
+            *PS: My grammar is not the best, 
+            so those post may contain grammar mistakes and typos please help me to fix them by making a pull request with corrections*
 # social links
 #twitter_username: @EspyMur
 #github_username:  @espoirMur
