--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 title: Espoir Murhabazi, Software Engineer and  Aspiring Machine Learning Engineer
 author: Espoir Murhabazi Buzina 
 email: espoir.mur@gmail.Com
-description: My personal website, I always write  about problems I am facing in my career and the solution I found after googling and sometimes the lessons I have learned. *PS: My grammar is not the best,  so those post may contain grammar mistakes and typos please help me to fix them by making a pull request with corrections*
+description: My personal website
+      body : |
+        I always write  about problems I am facing in my career and the solution I found after googling
+        and sometimes the lessons I have learned.
+        PS: My grammar is not the best,  so those post may contain grammar mistakes and typos 
+        please help me to fix them by making a pull request with corrections
 # social links
 #twitter_username: @EspyMur
 #github_username:  @espoirMur
