--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,14 @@
-title: Espoir Murhabazi, Software Engineer and  Aspiring Machine Learning Engineer
-author: Espoir Murhabazi Buzina 
+--- 
+author: "Espoir Murhabazi Buzina"
+description: |
+    My personal website
+    I always write  about problems I am facing in my career and the solution I found after googling
+    and sometimes the lessons I have learned.
+    PS: My grammar is not the best,  so those post may contain grammar mistakes and typos 
+    please help me to fix them by making a pull request with corrections
 email: espoir.mur@gmail.Com
-description:  |
-  My personal website
-  I always write  about problems I am facing in my career and the solution I found after googling
-  and sometimes the lessons I have learned.
-  PS: My grammar is not the best,  so those post may contain grammar mistakes and typos 
-  please help me to fix them by making a pull request with corrections
-# social links
-#twitter_username: @EspyMur
-#github_username:  @espoirMur
-#stackoverflow_username: espoir-murhabazi
-#medium_username: @EspyMur
-show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima 
-plugins: ['jekyll-twitter-plugin']
+plugins: 
+  - jekyll-twitter-plugin
+show_excerpts: true
+theme: minima
+title: "Espoir Murhabazi, Software Engineer and  Aspiring Machine Learning Engineer"
