--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ plugins:
   - jekyll-twitter-plugin
 show_excerpts: true
 theme: minima
-title: "Espoir Murhabazi, Software Engineer and  Aspiring Machine Learning Engineer"
+title: "Espoir Murhabazi, Software Engineer and  Aspiring Data Scientist"
